--- a/app/src/main/res/layout/save.xml
+++ b/app/src/main/res/layout/save.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/profile"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Save activity"/>
