--- a/app/src/main/res/layout/start.xml
+++ b/app/src/main/res/layout/start.xml
@@ -11,7 +11,6 @@
     <TextView
         android:id="@+id/text_view_result"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/start_activity"/>
+        android:layout_height="wrap_content"/>
     </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
