--- a/app/src/main/res/layout/save.xml
+++ b/app/src/main/res/layout/save.xml
@@ -11,6 +11,7 @@
         <TextView
             android:id="@+id/showprofile"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            />
     </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
