--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,7 +14,7 @@
             android:id="@+id/userProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="profile" />
+            android:text="" />
     </androidx.core.widget.NestedScrollView>
 
 </RelativeLayout>
