--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -7,84 +7,86 @@
     android:padding="10dp"
     tools:context=".Inventory">
 
-    <LinearLayout
+
+    <com.shuhart.stepview.StepView
+        android:id="@+id/step_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="652dp"
+        android:padding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-        
-        <TextView
-            android:id="@+id/stepTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="sans-serif-black"
-            android:text="Paage 1"
-            android:textColor="#ccc"
-            android:textSize="55sp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"/>
+        app:sv_selectedCircleColor="@color/green"
+        app:sv_selectedCircleRadius="12dp"
+        app:sv_selectedStepNumberColor="@color/black"
+        app:sv_selectedTextColor="@color/black"
+        app:sv_stepLineWidth="8dp"
+        app:sv_doneCircleColor="@color/white"
+        app:sv_doneCircleRadius="12dp"
+        app:sv_doneStepLineColor="@color/green"
+        app:sv_doneStepMarkColor="@color/green"
+        app:sv_nextStepCircleColor="@color/green"
+        app:sv_nextTextColor="@color/black"
+        app:sv_stepNumberTextSize="18sp"
+        app:sv_stepPadding="4dp"
+        app:sv_stepsNumber="3"
+        app:sv_stepViewStyle="@color/black" />
 
-        <TextView
-            android:id="@+id/descriptionTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="sans-serif-light"
-            android:text="lorem ajsdhkjs"
-            android:textColor="#ccc"
-            android:textSize="40sp"
-            android:layout_marginRight="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"/>
-
-        <Button
-            android:id="@+id/next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Next"
-            android:visibility="visible"
-            android:textSize="20sp"/>
+    <LinearLayout
+        android:id="@+id/nav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.473"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/step_view">
 
         <Button
             android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Back"
-            android:visibility="invisible"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:visibility="invisible" />
+
+        <Button
+            android:id="@+id/next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="200dp"
+            android:text="Next"
+            android:textSize="20sp"
+            android:visibility="visible" />
     </LinearLayout>
 
-    <com.shuhart.stepview.StepView
-        android:id="@+id/step_view"
+    <androidx.cardview.widget.CardView
+        app:layout_constraintTop_toBottomOf="@+id/nav"
+        android:layout_width="match_parent"
+        android:layout_height="380dp"
+        android:layout_margin="30dp"
+        android:background="@drawable/custome_edttext"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="20dp">
+
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
-        android:padding="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:sv_doneCircleColor="@color/blue"
-        app:sv_doneCircleRadius="12dp"
-        app:sv_doneStepLineColor="@color/blue"
-        app:sv_doneStepMarkColor="@color/blue"
-        app:sv_nextStepCircleColor="@color/blue"
-        app:sv_nextTextColor="@color/blue"
-        app:sv_selectedCircleColor="@color/blue"
-        app:sv_selectedCircleRadius="12dp"
-        app:sv_selectedStepNumberColor="@color/blue"
-        app:sv_selectedTextColor="@color/blue"
-        app:sv_stepLineWidth="1dp"
-        app:sv_stepNumberTextSize="18sp"
-        app:sv_stepPadding="4dp"
-        app:sv_stepViewStyle="@color/blue"
-        />
+        android:layout_marginBottom="12dp"
 
+        android:hint="Store">
+
+        <com.google.android.material.textfield.TextInputEditText
+            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
