--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="purple">#8692f7</color>
     <color name="blue">#0000FF</color>
     <color name="green">#00FF00</color>
+    <color name="red">#FF0000</color>
 </resources>
