--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -4,35 +4,36 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="10dp"
     tools:context=".Inventory">
 
 
     <com.shuhart.stepview.StepView
+        android:layout_marginTop="20dp"
         android:id="@+id/step_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="652dp"
-        android:padding="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:sv_nextStepCircleColor="@color/green"
+        app:sv_nextTextColor="@color/black"
         app:sv_selectedCircleColor="@color/green"
         app:sv_selectedCircleRadius="12dp"
         app:sv_selectedStepNumberColor="@color/black"
         app:sv_selectedTextColor="@color/black"
-        app:sv_stepLineWidth="8dp"
-        app:sv_nextStepCircleColor="@color/green"
-        app:sv_nextTextColor="@color/black"
+        app:sv_stepLineWidth="10dp"
         app:sv_stepNumberTextSize="18sp"
         app:sv_stepPadding="4dp"
         app:sv_stepsNumber="3"
         app:sv_stepViewStyle="@color/black"
         app:sv_doneCircleColor="@color/white"
-        app:sv_doneCircleRadius="12dp"
+        app:sv_doneCircleRadius="14dp"
         app:sv_doneStepLineColor="@color/green"
         app:sv_doneStepMarkColor="@color/green"/>
 
@@ -53,6 +54,7 @@
             android:layout_height="wrap_content"
             android:text="Back"
             android:textSize="20sp"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
             android:visibility="invisible" />
 
         <Button
@@ -62,11 +64,13 @@
             android:layout_marginLeft="200dp"
             android:text="Next"
             android:textSize="20sp"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
             android:visibility="visible" />
     </LinearLayout>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/empStore"
+            android:visibility="visible"
+            android:id="@+id/cardview1"
             android:layout_width="match_parent"
             android:layout_height="380dp"
             android:layout_margin="30dp"
@@ -124,9 +128,34 @@
                         android:id="@+id/showEmpName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Quốc Bảo"
                         android:textSize="16sp" />
-                    />
+
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_horizontal">
+                    <TextView
+                        android:id="@+id/date"
+                        android:layout_width="50dp"
+                        android:layout_height="match_parent"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        android:text="Time: "/>
+                    <TextView
+                        android:id="@+id/showRealTimeDate"
+                        android:textSize="16sp"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/showRealTime"
+                        android:textSize="16sp"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"/>
+
                 </LinearLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -154,8 +183,9 @@
 
 
     <androidx.cardview.widget.CardView
+        android:visibility="visible"
         android:id="@+id/empTotal"
-        app:layout_constraintTop_toBottomOf="@+id/empStore"
+        app:layout_constraintTop_toBottomOf="@+id/cardview1"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_width="match_parent"
@@ -172,6 +202,8 @@
             android:layout_gravity="center_horizontal">
 
             <TextView
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
                 android:id="@+id/total"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
@@ -180,6 +212,8 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
                 android:id="@+id/showTotal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -194,6 +228,8 @@
             android:layout_gravity="center_horizontal">
 
             <TextView
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
                 android:id="@+id/found"
                 android:layout_width="64dp"
                 android:layout_height="wrap_content"
@@ -203,6 +239,8 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
                 android:id="@+id/showFound"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -217,6 +255,8 @@
             android:layout_gravity="center_horizontal">
 
             <TextView
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
                 android:id="@+id/missed"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
@@ -226,6 +266,8 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
                 android:id="@+id/showMissed"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -236,5 +278,40 @@
 
     </androidx.cardview.widget.CardView>
 
+    <androidx.cardview.widget.CardView
+        android:visibility="invisible"
+        android:id="@+id/cardview2"
+        android:layout_width="match_parent"
+        android:layout_height="380dp"
+        android:layout_margin="30dp"
+        android:background="@drawable/custome_edttext"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nav">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Card 2"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:visibility="invisible"
+        android:id="@+id/cardview3"
+        android:layout_width="match_parent"
+        android:layout_height="380dp"
+        android:layout_margin="30dp"
+        android:background="@drawable/custome_edttext"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nav">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Card 3"/>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
