--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -27,7 +27,7 @@
         app:sv_selectedCircleRadius="12dp"
         app:sv_selectedStepNumberColor="@color/black"
         app:sv_selectedTextColor="@color/black"
-        app:sv_stepLineWidth="10dp"
+        app:sv_stepLineWidth="4dp"
         app:sv_stepNumberTextSize="18sp"
         app:sv_stepPadding="4dp"
         app:sv_stepsNumber="3"
@@ -296,22 +296,67 @@
             android:text="Card 2"/>
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
+    <androidx.core.widget.NestedScrollView
         android:visibility="invisible"
         android:id="@+id/cardview3"
-        android:layout_width="match_parent"
-        android:layout_height="380dp"
+        android:layout_width="500dp"
+        android:layout_height="wrap_content"
         android:layout_margin="30dp"
-        android:background="@drawable/custome_edttext"
         app:cardCornerRadius="20dp"
         app:cardElevation="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nav">
-        <TextView
+
+        <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Card 3"/>
-    </androidx.cardview.widget.CardView>
+            android:layout_margin="40dp">
+            <TableRow
+                android:background="@color/green">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Product ID"
+                    android:textColor="@color/black"
+                    android:padding="10sp"
+                    android:textSize="14sp"
+                    android:layout_weight="4"
+                    android:gravity="center_horizontal"/>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Name"
+                    android:textColor="@color/black"
+                    android:padding="10sp"
+                    android:textSize="14sp"
+                    android:layout_weight="4"
+                    android:gravity="center_horizontal"/>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Barcode"
+                    android:textColor="@color/black"
+                    android:padding="10sp"
+                    android:textSize="14sp"
+                    android:layout_weight="4"
+                    android:gravity="center_horizontal"/>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="RFID"
+                    android:textColor="@color/black"
+                    android:padding="10sp"
+                    android:textSize="14sp"
+                    android:layout_weight="4"
+                    android:gravity="center_horizontal"/>
+
+            </TableRow>
+        </TableLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
