--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -150,11 +150,12 @@
                         android:textSize="16sp"
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"/>
-                    <TextView
+                    <TextClock
                         android:id="@+id/showRealTime"
                         android:textSize="16sp"
                         android:layout_width="100dp"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:format12Hour="hh:mm:ss a" />
 
                 </LinearLayout>
 
@@ -181,105 +182,8 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-
     <androidx.cardview.widget.CardView
-        android:visibility="visible"
-        android:id="@+id/empTotal"
-        app:layout_constraintTop_toBottomOf="@+id/cardview1"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_margin="30dp"
-        android:background="@drawable/custome_edttext"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="20dp">
-
-        <LinearLayout
-            android:id="@+id/storeTotal"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_gravity="center_horizontal">
-
-            <TextView
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:id="@+id/total"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:text="Total: "
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:id="@+id/showTotal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="16sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_marginTop="40dp"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_gravity="center_horizontal">
-
-            <TextView
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:id="@+id/found"
-                android:layout_width="64dp"
-                android:layout_height="wrap_content"
-                android:text="Found: "
-                android:textColor="@color/green"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:id="@+id/showFound"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="16sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_marginTop="80dp"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_gravity="center_horizontal">
-
-            <TextView
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:id="@+id/missed"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:text="Missed: "
-                android:textColor="@color/red"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:id="@+id/showMissed"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="16sp" />
-        </LinearLayout>
-
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:visibility="invisible"
+        android:visibility="gone"
         android:id="@+id/cardview2"
         android:layout_width="match_parent"
         android:layout_height="380dp"
@@ -296,22 +200,122 @@
             android:text="Card 2"/>
     </androidx.cardview.widget.CardView>
 
-    <androidx.core.widget.NestedScrollView
-        android:visibility="invisible"
+    <LinearLayout
+        android:gravity="center"
+        android:id="@+id/empTotal"
+        android:layout_width="410dp"
+        android:layout_height="100dp"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@+id/nav">
+
+        <LinearLayout
+            android:id="@+id/storeTotal"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/total"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:text="Total: "
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:gravity="center"
+                android:id="@+id/showTotal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:text="0"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <Space
+            android:layout_width="40dp"
+            android:layout_height="0dp"/>
+
+        <LinearLayout
+            app:layout_constraintRight_toRightOf="@id/total"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/found"
+                android:layout_width="64dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:text="Found: "
+                android:textColor="@color/green"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:gravity="center"
+                android:id="@+id/showFound"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:text="0"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <Space
+            android:layout_width="40dp"
+            android:layout_height="0dp"/>
+
+        <LinearLayout
+            app:layout_constraintRight_toRightOf="@id/found"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/missed"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:text="Missed: "
+                android:textColor="@color/red"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:gravity="center"
+                android:id="@+id/showMissed"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:text="0"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+    <androidx.cardview.widget.CardView
+        android:visibility="gone"
         android:id="@+id/cardview3"
         android:layout_width="500dp"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nav">
+        app:layout_constraintTop_toBottomOf="@+id/empTotal">
 
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="40dp">
+            android:layout_margin="0dp">
             <TableRow
                 android:background="@color/green">
                 <TextView
@@ -355,8 +359,22 @@
                     android:gravity="center_horizontal"/>
 
             </TableRow>
+
         </TableLayout>
+    </androidx.cardview.widget.CardView>
 
+    <androidx.core.widget.NestedScrollView
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:layout_marginTop="36dp"
+        app:layout_constraintTop_toBottomOf="@+id/empTotal"
+        tools:layout_editor_absoluteX="0dp">
+
+        <TextView
+            android:id="@+id/text_view_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hello world" />
     </androidx.core.widget.NestedScrollView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
