--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -164,11 +164,13 @@
                     android:layout_height="wrap_content"
                     android:hint="Inventory*"
                     android:textColorHint="@color/red"
-                    app:layout_constraintBottom_toBottomOf="parent">
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    tools:ignore="MissingClass">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:text="Inventory11"
                         app:layout_constraintBottom_toBottomOf="@+id/empName" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -176,7 +178,7 @@
                 <Spinner
                     android:id="@+id/spinner"
                     android:layout_width="150dp"
-                    android:layout_height="48dp"
+                    android:layout_height="50dp"
                     android:layout_marginTop="10dp" />
 
             </LinearLayout>
@@ -207,7 +209,8 @@
         android:layout_height="100dp"
         android:orientation="horizontal"
         android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@+id/nav">
+        app:layout_constraintTop_toBottomOf="@+id/nav"
+        tools:ignore="MissingConstraints">
 
         <LinearLayout
             android:id="@+id/storeTotal"
@@ -306,7 +309,7 @@
     <androidx.cardview.widget.CardView
         android:visibility="gone"
         android:id="@+id/cardview3"
-        android:layout_width="500dp"
+        android:layout_width="420dp"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
