--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -69,7 +69,7 @@
     </LinearLayout>
 
         <androidx.cardview.widget.CardView
-            android:visibility="visible"
+            android:visibility="gone"
             android:id="@+id/cardview1"
             android:layout_width="match_parent"
             android:layout_height="380dp"
@@ -185,7 +185,7 @@
         </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:visibility="gone"
+        android:visibility="visible"
         android:id="@+id/cardview2"
         android:layout_width="match_parent"
         android:layout_height="380dp"
@@ -196,10 +196,35 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nav">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Card 2"/>
+
+        <Spinner
+            android:visibility="visible"
+            android:id="@+id/inventory_type"
+            android:layout_width="280dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="40dp"
+            />
+
+        <Spinner
+            android:visibility="gone"
+            android:id="@+id/inventory"
+            android:layout_width="280dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="100dp"
+            android:singleLine="true"
+            />
+
+        <Spinner
+            android:visibility="gone"
+            android:id="@+id/categories"
+            android:layout_width="280dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="200dp"
+            />
+
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
