--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:background="@drawable/loginbkg"
-    tools:context=".MainActivity">
+    tools:context=".main.MainActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
