--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="blue">#0000FF</color>
     <color name="green">#00FF00</color>
     <color name="red">#FF0000</color>
+    <color name="avtColor">#5AB4CA</color>
 </resources>
