--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,18 +35,18 @@
         android:layout_height="66dp"
         android:layout_marginTop="44dp"
         android:text="Inventory"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintEnd_toStartOf="@+id/scan"
         app:layout_constraintHorizontal_bias="0.323"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Startbtn" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/scan"
         android:layout_width="138dp"
         android:layout_height="66dp"
         android:layout_marginTop="44dp"
         android:layout_marginEnd="36dp"
-        android:text="Button"
+        android:text="Scanner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Save" />
 </androidx.constraintlayout.widget.ConstraintLayout>
