--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -33,8 +33,9 @@
         app:layout_constraintEnd_toEndOf="@+id/imageView" />
 
     <TextView
+        android:textAlignment="center"
         android:id="@+id/empName"
-        android:layout_width="wrap_content"
+        android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:textSize="30dp"
@@ -45,7 +46,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="380dp"
+        android:layout_height="450dp"
         android:layout_margin="30dp"
         android:layout_marginBottom="80dp"
         android:background="@drawable/custome_edttext"
@@ -60,7 +61,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="382dp"
+            android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
             android:orientation="vertical"
             android:padding="24dp">
@@ -73,69 +74,101 @@
                 android:textSize="24dp" />
 
             <TextView
-                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="Check in"
-                android:textSize="24dp"/>
+                android:textSize="24dp" />
 
             <LinearLayout
-                android:layout_marginLeft="10dp"
                 android:layout_width="253dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="10dp"
                 android:orientation="vertical"
                 android:padding="24dp">
 
                 <TextView
                     android:id="@+id/dateCheckin"
-                    android:textSize="20dp"
-                    android:text="Date"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:text="Date"
+                    android:textSize="20dp" />
 
                 <TextView
                     android:id="@+id/timeCheckin"
-                    android:textSize="20dp"
-                    android:text="Time"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:text="Time"
+                    android:textSize="20dp" />
 
             </LinearLayout>
 
             <TextView
-                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="Check out"
-                android:textSize="24dp"/>
+                android:textSize="24dp" />
 
             <LinearLayout
-                android:layout_marginLeft="10dp"
                 android:layout_width="253dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="10dp"
                 android:orientation="vertical"
                 android:padding="24dp">
 
                 <TextView
                     android:id="@+id/dateCheckout"
-                    android:textSize="20dp"
-                    android:text="Date"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:text="Date"
+                    android:textSize="20dp" />
 
                 <TextView
                     android:id="@+id/timeCheckout"
-                    android:textSize="20dp"
-                    android:text="Time"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:text="Time"
+                    android:textSize="20dp" />
 
             </LinearLayout>
 
-        </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="253dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="10dp"
+                android:orientation="vertical"
+                android:padding="24dp"
+                >
+
+                <Button
+                    android:visibility="visible"
+                    android:id="@+id/checkinBtn"
+                    android:layout_width="162dp"
+                    android:layout_height="wrap_content"
+                    android:drawableRight="@drawable/baseline_exit_to_app_24"
+                    android:text="Check in"
+                    android:tint="@color/white" />
+
+                <Button
+                    android:visibility="gone"
+                    android:id="@+id/checkoutBtn"
+                    android:layout_width="162dp"
+                    android:layout_height="wrap_content"
+                    android:drawableRight="@drawable/baseline_logout_24"
+                    android:text="Check out"
+                    android:tint="@color/white" />
+
+            </LinearLayout>
+
+
+
+
+        </LinearLayout>
 
 
     </androidx.cardview.widget.CardView>
