--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -69,7 +69,7 @@
     </LinearLayout>
 
         <androidx.cardview.widget.CardView
-            android:visibility="visible"
+            android:visibility="gone"
             android:id="@+id/cardview1"
             android:layout_width="match_parent"
             android:layout_height="380dp"
@@ -332,9 +332,9 @@
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
-        android:visibility="gone"
+        android:visibility="visible"
         android:id="@+id/cardview3"
-        android:layout_width="420dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -342,51 +342,57 @@
 
         <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:stretchColumns="1,2,3,4"
             android:layout_margin="0dp">
             <TableRow
                 android:background="@color/green">
                 <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/id"
                     android:text="Product ID"
-                    android:textColor="@color/black"
-                    android:padding="10sp"
-                    android:textSize="14sp"
-                    android:layout_weight="4"
-                    android:gravity="center_horizontal"/>
+                    android:textSize="16dp"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:padding="10dp"
+                    android:layout_column="1"/>
 
                 <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/name"
                     android:text="Name"
-                    android:textColor="@color/black"
-                    android:padding="10sp"
-                    android:textSize="14sp"
-                    android:layout_weight="4"
-                    android:gravity="center_horizontal"/>
+                    android:textSize="16dp"
+                    android:textStyle="bold"
+                    android:padding="10dp"
+                    android:gravity="center"
+                    android:layout_column="1"/>
+
+
 
                 <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="Barcode"
-                    android:textColor="@color/black"
-                    android:padding="10sp"
-                    android:textSize="14sp"
-                    android:layout_weight="4"
-                    android:gravity="center_horizontal"/>
+                    android:id="@+id/barCode"
+                    android:text="BarCode"
+                    android:textSize="16dp"
+                    android:textStyle="bold"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_column="1"/>
 
                 <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:id="@+id/rfid"
                     android:text="RFID"
-                    android:textColor="@color/black"
-                    android:padding="10sp"
-                    android:textSize="14sp"
-                    android:layout_weight="4"
-                    android:gravity="center_horizontal"/>
+                    android:textSize="16dp"
+                    android:textStyle="bold"
+                    android:padding="10dp"
+                    android:layout_column="1"/>
 
             </TableRow>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="match_parent"
+                android:foregroundGravity="center"
+                android:layout_height="wrap_content"
+                />
 
         </TableLayout>
     </androidx.cardview.widget.CardView>
@@ -396,6 +402,7 @@
         android:layout_width="match_parent"
         android:layout_height="500dp"
         android:layout_marginTop="36dp"
+        android:foregroundGravity="center"
         app:layout_constraintTop_toBottomOf="@+id/empTotal"
         tools:layout_editor_absoluteX="0dp">
 
