--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -67,10 +67,10 @@
             android:padding="24dp">
 
             <TextView
-                android:id="@+id/empRole"
+                android:id="@+id/empID"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Role"
+                android:text="Emp ID:"
                 android:textSize="24dp" />
 
             <TextView
