--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -52,7 +52,7 @@
             android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Back"
+            android:drawableEnd="@drawable/baseline_arrow_back_24"
             android:textSize="20sp"
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:visibility="invisible" />
@@ -62,14 +62,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="200dp"
-            android:text="Next"
+            android:drawableEnd="@drawable/baseline_arrow_forward_24"
             android:textSize="20sp"
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:visibility="visible" />
     </LinearLayout>
 
         <androidx.cardview.widget.CardView
-            android:visibility="gone"
+            android:visibility="visible"
             android:id="@+id/cardview1"
             android:layout_width="match_parent"
             android:layout_height="380dp"
@@ -332,7 +332,7 @@
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
-        android:visibility="visible"
+        android:visibility="gone"
         android:id="@+id/cardview3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
