--- a/app/src/main/res/layout/product_layout.xml
+++ b/app/src/main/res/layout/product_layout.xml
@@ -1,49 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:stretchColumns="1,2,3,4">
 
-    <TableRow
-        android:background="@color/white">
-        <TextView
-            android:id="@+id/id"
-            android:text="@string/product_id"
-            android:textSize="16sp"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:padding="10dp"
-            android:layout_column="1"/>
+    <TextView
+        android:id="@+id/productID"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/name"
-            android:text="@string/name"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:padding="10dp"
-            android:gravity="center"
-            android:layout_column="1"/>
+    <TextView
+        android:id="@+id/productName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
+    <TextView
+        android:id="@+id/productBarCode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
+    <TextView
+        android:id="@+id/productRFID"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/barCode"
-            android:text="@string/barcode"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:padding="10dp"
-            android:layout_column="1"/>
-
-        <TextView
-            android:gravity="center"
-            android:id="@+id/rfid"
-            android:text="@string/rfid"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:padding="10dp"
-            android:layout_column="1"/>
-
-    </TableRow>
-
-</TableLayout>
+</LinearLayout>
